<resources>
    <string name="app_name">FinalProject-Appraisal</string>
    <string name="client_id">Client ID</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="web_client_id">193264017428-53mt34rg7qisqrgp8emogvbk89va0q5e.apps.googleusercontent.com</string>
    <string name="full_address">כתובת מלאה</string>

    ///

    <string name="take_photo">צלם תמונה</string>
    <string name="select_from_gallery">בחר מגלריה</string>
    <string name="classify_door">סווג דלת</string>
    <string name="door_image">תמונת דלת</string>
    <string name="upload_success">התמונה הועלתה בהצלחה!</string>
    <string name="upload_failure">שגיאה בהעלאת התמונה</string>
    <string name="classification_result">סוג דלת: %1$s</string>
    <string name="loading">מעבד...</string>
    <string name="no_image_selected">לא נבחרה תמונה</string>
    <string name="permission_denied">הרשאות נדרשות לשימוש באפליקציה</string>

    <!-- New strings for kitchen cabinet detector -->
    <string name="kitchen_cabinet_detector">בודק ארונות מטבח</string>
    <string name="kitchen_image">תמונת מטבח</string>
    <string name="from_gallery">בחר מגלריה</string>
    <string name="classify_cabinets">זהה ארונות</string>
    <string name="result_placeholder">תוצאות הזיהוי יופיעו כאן</string>

    <string name="client_id_firebase" >193264017428-24qch0o58m7nk06lt77e3inueh241bi5.apps.googleusercontent.com</string>

</resources>
